Fixed the bug that the footer of the left pane was located at the wrong position.

--- a/app/styles/window.css
+++ b/app/styles/window.css
@@ -18,9 +18,10 @@ body {
 }
 
 .sidebarHeader {
-    padding: 2px;
-    margin-right: 2px;
-    background: white;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    background: #f5f5f5;
     height: 35px;
 }
 
